AUTH - docker: initial dockerfile

--- a/auth/makefile
+++ b/auth/makefile
@@ -8,3 +8,14 @@ run-default:
 tidy:
 	go mod tidy
 	go mod vendor
+
+# ==============================================================================
+# Building containers
+VERSION := develop
+
+auth-api:
+	docker build \
+		-f docker/Dockerfile.auth-api \
+		-t auth-api:$(VERSION) \
+		--build-arg BUILD_REF=$(VERSION) \
+		.
