AUTH - docker: fix docker file for service

--- a/auth/makefile
+++ b/auth/makefile
@@ -15,7 +15,7 @@ VERSION := develop
 
 auth-api:
 	docker build \
-		-f docker/Dockerfile.auth-api \
+		-f deploy/Dockerfile.auth-api \
 		-t auth-api:$(VERSION) \
 		--build-arg BUILD_REF=$(VERSION) \
 		.
